<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wage Calculator</string>
    <string name="title_activity_wage">Wage Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rate_edit_text">Rate</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="notification_heading">NOTIFICATION</string>
    <string name="your_wage_heading">YOUR WAGE</string>
    <string name="settings_heading">SETTINGS</string>
    <string name="start_wage_calculator_button">Continue</string>
    <string name="initial_money">0.00</string>
    <string name="startTime">00:00:00</string>

</resources>
